# cmc_msu_cpp_course

extra_tasks/: CMakeLists.txt  main.cpp  my_iterator.cpp  my_iterator.h
extra_tasks/extra_task_7/: map_with_hint.cpp  map_without_hint.cpp  task_1_with_compare.cpp
problem1/: CMakeLists.txt  array.cpp  main.cpp  test.cpp  tree.h
problem2/: CMakeLists.txt  basic_function.cpp  basic_function.h  factory_functions.cpp  factory_functions.h  main.cpp
testing/: Makefile  datastorage.cpp  datastorage.h  main.cpp
